<resources>
    <string name="app_name">Cbb</string>
    <string name="action_settings">Settings</string>
    <string name="nav_recommend">推荐</string>
    <string name="nav_date">相约</string>
    <string name="nav_search">搜索</string>
    <string name="nav_mine">我的</string>


    <string name="title_dayly_recommend">每日推荐</string>
    <string name="title_normal_recommend">推荐</string>
    <string name="title_my_recommend">我的推荐</string>


    <string name="data_result_empty">空空如也,请点击屏幕重试</string>
    <string name="data_result_error">网络有误,请点击重试</string>
    <string name="data_result_unlogin">用户未登录,点击屏幕去登录</string>

    <string name="title_operation_add">添加</string>


    <string name="title_oeration_root_search">路径规划</string>
    <string name="title_oeration_map_search">地图搜索</string>


    <string name="title_recommend">推荐</string>
    <string name="title_recommend_ok">确定推荐</string>
    <string name="title_recommend_cancel">取消推荐</string>


    <string name="title_recommend_content">确定要推荐这个[%1$s]位置吗?</string>

    <string name="store_name">店铺名称:</string>
    <string name="store_address">店铺地址:</string>
    <string name="recommend_type">推荐类型:</string>
    <string name="recommend_info">推荐信息:</string>
    <string name="recommend_user">推荐人:</string>


    <string name="recommend_type_daily">每日推荐</string>
    <string name="recommend_type_normal">普通推荐</string>
    <string name="recommend_type_date">约会</string>


    <string name="recommend_info_edit">编辑推荐信息</string>
    <string name="recommend_date_info_edit">编辑约会信息</string>
    <string name="recommend_info_edit_empty_tip">推荐信息不能为空</string>
    <string name="recommend_date_info_edit_empty_tip">约会信息不能为空</string>

    <string name="recommend_uploading">推荐上传中...</string>


    <string name="title_date_common">约会</string>
    <string name="title_date_mime">我发出的约会</string>

    <string name="title_recommend_detail">详情</string>
    <string name="title_recommend_comment">评论</string>
    <string name="recommend_comment">评论</string>
    <string name="recommend_comment_tip">请输入评论信息</string>

    <string name="comment_is_empty">未输入评论信息,请核实</string>

    <string name="title_register">注册用户</string>
    <string name="title_do_register">注册</string>



</resources>
