<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/bt_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/recommend_comment" />

        <EditText
            android:id="@+id/et_comment_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/recommend_comment_tip"
            android:layout_toLeftOf="@id/bt_comment" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/rl_comment"
        >

        <com.edus.view.DmRecyclerViewWrapper
            android:id="@+id/drvw_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tv_empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/data_result_empty" />
    </RelativeLayout>

</RelativeLayout>